# app/Http/Controllers/ApiDocumentationController.php
@@ -15,6 +15,14 @@ namespace App\Http\Controllers;
  *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
  *      )
  * )
+ *
+ * @OA\SecurityScheme(
+ *      securityScheme="bearerAuth",
+ *      type="http",
+ *      scheme="bearer",
+ *      bearerFormat="JWT",
+ *      description="Enter your Bearer token in the format: `Bearer {token}`"
+ *  )
  */
 class ApiDocumentationController extends Controller
 {
